--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
     <module>launcher</module>
     <module>external/kafka</module>
     <module>external/kafka-assembly</module>
+    <module>yarn</module>
   </modules>
 
   <properties>
