--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
     <module>launcher</module>
     <module>external/kafka</module>
     <module>external/kafka-assembly</module>
-    <module>yarn</module>
+    <module>yarn</module> <!-- 增加YARN模块 -->
   </modules>
 
   <properties>
