--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
     <module>sql/catalyst</module>
     <module>sql/core</module>
     <module>sql/hive</module>
+    <module>sql/hive-thriftserver</module>
     <module>assembly</module>
     <module>external/flume</module>
     <module>external/flume-sink</module>
@@ -1324,9 +1325,9 @@
       <dependency>
         <groupId>${hive.group}</groupId>
         <artifactId>hive-exec</artifactId>
-<!--
-        <classifier>core</classifier>
--->
+        <!--
+                <classifier>core</classifier>
+        -->
         <version>${hive.version}</version>
         <scope>${hive.deps.scope}</scope>
         <exclusions>
@@ -2171,7 +2172,7 @@
             <execution>
               <id>default-cli</id>
               <goals>
-                 <goal>build-classpath</goal>
+                <goal>build-classpath</goal>
               </goals>
               <configuration>
                 <!-- This includes dependencies with 'runtime' and 'compile' scopes;
@@ -2538,7 +2539,7 @@
 
     <profile>
       <id>hadoop-2.2</id>
-    <!-- SPARK-7249: Default hadoop profile. Uses global properties. -->
+      <!-- SPARK-7249: Default hadoop profile. Uses global properties. -->
     </profile>
 
     <profile>
@@ -2808,4 +2809,17 @@
       <id>sparkr</id>
     </profile>
   </profiles>
+
+  <!-- add for teligen private nexus repo -->
+  <distributionManagement>
+    <repository>
+      <id>repo-teligen</id>
+      <url>http://192.192.189.49:8081/nexus/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>repo-teligen</id>
+      <url>http://192.192.189.49:8081/nexus/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
 </project>
